--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200,300,400;500&family=Lora:ital@0;1;,wght@1,100;1,200;1,300;1,400;500&family=Poppins:wght@200,300,400;500&family=Varela+Round&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200,300,400;500&family=Lora:ital@0;1;&family=Poppins:wght@200,300,400;500&family=Varela+Round&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/3cdee5321e.js" crossorigin="anonymous"></script>
     <style>
       * {
